@@ -25,7 +25,6 @@
   <packaging>pom</packaging>
 
   <name>Apache ORC</name>
-<<<<<<< HEAD
   <description>ORC is a self-describing type-aware columnar file format designed
      for Hadoop workloads. It is optimized for large streaming reads,
      but with integrated support for finding required rows
@@ -33,17 +32,6 @@
      decompress, and process only the values that are required for the
      current query.</description>
   <url>https://orc.apache.org</url>
-=======
-  <url>https://orc.apache.org</url>
-  <description>
-    ORC is a self-describing type-aware columnar file format designed
-    for Hadoop workloads. It is optimized for large streaming reads,
-    but with integrated support for finding required rows
-    quickly. Storing data in a columnar format lets the reader read,
-    decompress, and process only the values that are required for the
-    current query.
-  </description>
->>>>>>> b73cc5e9c (ORC-817: Replace aircompressor ZStandard compression with zstd-jni)
   <inceptionYear>2013</inceptionYear>
 
   <mailingLists>
@@ -97,7 +85,6 @@
     <test.tmp.dir>${project.build.directory}/testing-tmp</test.tmp.dir>
   </properties>
 
-<<<<<<< HEAD
   <dependencyManagement>
     <dependencies>
       <!-- intra-project dependencies -->
@@ -106,402 +93,6 @@
         <artifactId>orc-format</artifactId>
         <version>${orc-format.version}</version>
       </dependency>
-=======
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <id>enforce-maven</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <version>${maven.version}</version>
-                </requireMavenVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <links>
-            <link>https://hadoop.apache.org/docs/r${hadoop.version}/api</link>
-            <link>https://orc.apache.org/api/hive-storage-api</link>
-            <link>https://orc.apache.org/api/orc-core</link>
-            <link>https://orc.apache.org/api/orc-mapreduce</link>
-            <link>https://orc.apache.org/api/orc-tools</link>
-          </links>
-          <offlineLinks>
-            <offlineLink>
-              <url>https://orc.apache.org/api/hive-storage-api</url>
-              <location>${project.basedir}/../../site/api/hive-storage-api</location>
-            </offlineLink>
-            <offlineLink>
-              <url>https://orc.apache.org/api/orc-core</url>
-              <location>${project.basedir}/../../site/api/orc-core</location>
-            </offlineLink>
-            <offlineLink>
-              <url>https://orc.apache.org/api/orc-mapreduce</url>
-              <location>${project.basedir}/../../site/api/orc-mapreduce</location>
-            </offlineLink>
-          </offlineLinks>
-          <reportOutputDirectory>${project.basedir}/../../site/api</reportOutputDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>setup-test-dirs</id>
-            <phase>process-test-resources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <delete dir="${test.tmp.dir}" />
-                <mkdir dir="${test.tmp.dir}" />
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <configuration>
-          <attach>true</attach>
-        </configuration>
-        <executions>
-          <execution>
-            <id>create-source-jar</id>
-            <goals>
-              <goal>jar-no-fork</goal>
-              <goal>test-jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <trimStackTrace>false</trimStackTrace>
-          <reuseForks>false</reuseForks>
-          <argLine>-Xmx2048m -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
-          <environmentVariables>
-            <TZ>US/Pacific</TZ>
-            <LANG>en_US.UTF-8</LANG>
-          </environmentVariables>
-          <useSystemClassLoader>false</useSystemClassLoader>
-          <failIfNoTests>false</failIfNoTests>
-          <systemPropertyVariables>
-            <test.tmp.dir>${test.tmp.dir}</test.tmp.dir>
-            <example.dir>${example.dir}</example.dir>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>io.github.zlika</groupId>
-        <artifactId>reproducible-build-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>strip-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
-          <configuration>
-            <archive>
-              <manifest>
-                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-              </manifest>
-            </archive>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.5</version>
-          <configuration>
-            <effort>Max</effort>
-            <excludeFilterFile>${basedir}/src/findbugs/exclude.xml</excludeFilterFile>
-            <xmlOutput>true</xmlOutput>
-            <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
-            <includeTests>true</includeTests>
-          </configuration>
-          <executions>
-            <execution>
-              <id>analyze-compile</id>
-              <phase>test</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.rat</groupId>
-          <artifactId>apache-rat-plugin</artifactId>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <excludeSubProjects>false</excludeSubProjects>
-            <excludes>
-              <exclude>**/data/**</exclude>
-              <exclude>**/*.iml</exclude>
-              <exclude>**/*.json</exclude>
-              <exclude>**/*.json.gz</exclude>
-              <exclude>**/*.orc</exclude>
-              <exclude>**/*.out</exclude>
-              <exclude>**/*.schema</exclude>
-              <exclude>**/*.md</exclude>
-              <exclude>**/target/**</exclude>
-              <exclude>.idea/**</exclude>
-              <exclude>**/*.iml</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.1.2</version>
-          <dependencies>
-            <dependency>
-              <groupId>com.puppycrawl.tools</groupId>
-              <artifactId>checkstyle</artifactId>
-              <version>9.2</version>
-            </dependency>
-          </dependencies>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <sourceDirectories>
-              <directory>${basedir}/src/java</directory>
-            </sourceDirectories>
-            <configLocation>checkstyle.xml</configLocation>
-            <failOnViolation>true</failOnViolation>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.2</version>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>analyze-only</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <failOnWarning>true</failOnWarning>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.2.0</version>
-          <executions>
-            <execution>
-              <id>add-source</id>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>add-source</goal>
-              </goals>
-              <configuration>
-                <sources>
-                  <source>${project.build.directory}/generated-sources</source>
-                </sources>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>com.github.os72</groupId>
-          <artifactId>protoc-jar-maven-plugin</artifactId>
-          <version>3.11.4</version>
-          <executions>
-            <execution>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>run</goal>
-              </goals>
-              <configuration>
-                <protocArtifact>${protoc.artifact}</protocArtifact>
-                <protocVersion>2.5.0</protocVersion>
-                <addSources>none</addSources>
-                <includeDirectories>
-                  <include>../../proto</include>
-                </includeDirectories>
-                <inputDirectories>
-                  <include>../../proto</include>
-                </inputDirectories>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>${maven-shade-plugin.version}</version>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>shade</goal>
-              </goals>
-              <configuration>
-                <artifactSet>
-                  <includes>
-                    <include>com.google.protobuf:protobuf-java</include>
-                    <include>org.apache.hive:hive-storage-api</include>
-                  </includes>
-                </artifactSet>
-                <shadedArtifactAttached>true</shadedArtifactAttached>
-                <shadedClassifierName>nohive</shadedClassifierName>
-                <relocations>
-                  <relocation>
-                    <pattern>com.google.protobuf</pattern>
-                    <shadedPattern>com.google.protobuf25</shadedPattern>
-                  </relocation>
-                  <relocation>
-                    <pattern>org.apache.hadoop.hive</pattern>
-                    <shadedPattern>org.apache.orc.storage</shadedPattern>
-                  </relocation>
-                  <relocation>
-                    <pattern>org.apache.hive</pattern>
-                    <shadedPattern>org.apache.orc.storage</shadedPattern>
-                  </relocation>
-                </relocations>
-                <filters>
-                  <filter>
-                    <artifact>*:*</artifact>
-                    <excludes>
-                      <exclude>module-info.class</exclude>
-                      <exclude>META-INF/MANIFEST.MF</exclude>
-                      <exclude>META-INF/DEPENDENCIES</exclude>
-                      <exclude>META-INF/LICENSE</exclude>
-                      <exclude>META-INF/NOTICE</exclude>
-                    </excludes>
-                  </filter>
-                </filters>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>io.github.zlika</groupId>
-          <artifactId>reproducible-build-maven-plugin</artifactId>
-          <version>0.14</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>cmake</id>
-      <build>
-        <directory>${build.dir}</directory>
-      </build>
-    </profile>
-    <profile>
-      <!-- a profile to check the source for common problems -->
-      <id>analyze</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.rat</groupId>
-            <artifactId>apache-rat-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <!-- a developer profile to build some benchmarks -->
-      <id>benchmark</id>
-      <modules>
-        <module>bench</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>aarch64</id>
-      <properties>
-        <protoc.artifact>com.google.protobuf:protoc:2.5.0:exe:osx-x86_64</protoc.artifact>
-      </properties>
-      <activation>
-        <os>
-          <arch>aarch64</arch>
-        </os>
-      </activation>
-    </profile>
-    <profile>
-      <id>java17</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <min.hadoop.version>3.3.1</min.hadoop.version>
-        <hadoop.version>3.3.1</hadoop.version>
-        <tools.hadoop.version>3.3.1</tools.hadoop.version>
-      </properties>
-    </profile>
-  </profiles>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- intra-project dependencies -->
->>>>>>> b73cc5e9c (ORC-817: Replace aircompressor ZStandard compression with zstd-jni)
       <dependency>
         <groupId>org.apache.orc</groupId>
         <artifactId>orc-shims</artifactId>
@@ -567,7 +158,7 @@
       <dependency>
         <groupId>com.github.luben</groupId>
         <artifactId>zstd-jni</artifactId>
-        <version>1.5.1-1</version>
+        <version>1.5.5-11</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
